# Hamoniq-Sync

Hamoniq Sync/: CLAUDE.md  ContentView.swift  Hamoniq_SyncApp.swift  Item.swift
Hamoniq Sync.xcodeproj/: project.pbxproj
Hamoniq Sync.xcodeproj/xcuserdata/jay.xcuserdatad/xcschemes/: xcschememanagement.plist
Hamoniq Sync/App/: Hamoniq_SyncApp.swift
Hamoniq Sync/Models/BusinessModels/: AlignmentMethod.swift  ConfidenceLevel.swift  MediaType.swift  ProjectType.swift  SupportingTypes.swift  SyncStrategy.swift
Hamoniq Sync/Models/DataModels/: Clip.swift  ExportConfiguration.swift  MediaGroup.swift  Project.swift  ProjectSettings.swift  SyncJob.swift  SyncResult.swift  UserPreferences.swift
Hamoniq Sync/Models/DataStore/: DataController.swift  ModelContainer+Extensions.swift
Hamoniq Sync/Services/Core/: BaseService.swift  ServiceProtocol.swift
Hamoniq Sync/Services/Data/: MediaService.swift  ProjectService.swift
Hamoniq Sync/Services/Sync/: AudioDecoder.swift.bak  SyncEngine.swift.bak  SyncService.swift
Hamoniq Sync/Services/Sync/HarmoniqSyncKit/: AsyncSyncEngine.swift  HarmoniqSyncKit-Bridging-Header.h  HarmoniqSyncKit.h  HarmoniqSyncKit.swift  SyncEngine.swift  module.modulemap
Hamoniq Sync/Services/Sync/HarmoniqSyncKit/Internal/: CAPIDefinitions.swift  CInterop.swift  CancellationManager.swift  PerformanceProfiler.swift  ProgressTracker.swift
Hamoniq Sync/Services/Sync/HarmoniqSyncKit/SwiftUI/: AsyncSyncTestView.swift
Hamoniq Sync/Services/Sync/HarmoniqSyncKit/Types/: ConfigurationTypes.swift  ErrorTypes.swift  SyncTypes.swift
Hamoniq Sync/Services/Sync/HarmoniqSyncKit/include/: module.modulemap
Hamoniq Sync/ViewModels/App/: AppViewModel.swift
Hamoniq Sync/ViewModels/Core/: AsyncViewModel.swift  BaseViewModel.swift  ObservableViewModel.swift  ViewModelProtocols.swift
Hamoniq Sync/Views/App/: ContentView.swift
Hamoniq Sync/Views/Components/Common/: AnimatedTransitionView.swift  ErrorStateView.swift  LoadingOverlayView.swift  NotificationView.swift  TooltipView.swift
Hamoniq Sync/Views/Components/Controls/: ActionButtonGroupView.swift  SliderControlView.swift  SmartDropZoneView.swift
Hamoniq Sync/Views/Components/Data/: EmptyStateView.swift  LoadingStateView.swift  SearchableListView.swift
Hamoniq Sync/Views/Components/Layout/: AdaptiveSplitView.swift  ContextualSidebarView.swift  ResizablePanelView.swift
Hamoniq Sync/Views/Components/Visualization/: ConfidenceIndicatorView.swift  VideoThumbnailView.swift  WaveformView.swift
Hamoniq Sync/Views/Media/: MediaImportView.swift
Hamoniq Sync/Views/Project/: ProjectBrowserView.swift  ProjectDetailView.swift
Hamoniq Sync/Views/SmartStart/: SmartStartView.swift
Hamoniq Sync/Views/Sync/: SyncWorkspaceView.swift
Hamoniq SyncTests/: Hamoniq_SyncTests.swift
Hamoniq SyncUITests/: Hamoniq_SyncUITests.swift  Hamoniq_SyncUITestsLaunchTests.swift
Sources/HarmoniqSyncCore/: CMakeLists.txt  PERFORMANCE_REPORT.md  WEEK3_COMPLETION_SUMMARY.md  c_api_stub.cpp  module.modulemap  test_basic_asan  test_basic_functionality  test_basic_functionality.cpp  test_c_api_integration  test_c_api_integration.cpp  test_comprehensive  test_comprehensive.cpp  test_comprehensive_asan  test_harmoniq  test_harmoniq.cpp  test_integration.cpp  test_sprint2_week1  test_sprint2_week1.cpp
Sources/HarmoniqSyncCore/cmake/: HarmoniqSyncCoreConfig.cmake.in
Sources/HarmoniqSyncCore/docs/: sprint2_week3_documentation.md
Sources/HarmoniqSyncCore/include/: alignment_engine.hpp  audio_processor.hpp  config_manager.hpp  error_handler.hpp  graceful_degradation.hpp  harmoniq_sync.h  input_validator.hpp  operation_control.hpp  sync_engine.hpp
Sources/HarmoniqSyncCore/src/: alignment_engine.cpp  audio_processor.cpp  c_bridge.cpp  config_manager.cpp  error_handler.cpp  graceful_degradation.cpp  input_validator.cpp  sync_engine.cpp
Sources/HarmoniqSyncCore/test/: test_audio_processor.cpp  test_end_to_end.cpp
Sources/HarmoniqSyncCore/test_basic_asan.dSYM/Contents/: Info.plist
Sources/HarmoniqSyncCore/test_basic_asan.dSYM/Contents/Resources/DWARF/: test_basic_asan
Sources/HarmoniqSyncCore/test_basic_asan.dSYM/Contents/Resources/Relocations/aarch64/: test_basic_asan.yml
Sources/HarmoniqSyncCore/test_basic_functionality.dSYM/Contents/: Info.plist
Sources/HarmoniqSyncCore/test_basic_functionality.dSYM/Contents/Resources/DWARF/: test_basic_functionality
Sources/HarmoniqSyncCore/test_basic_functionality.dSYM/Contents/Resources/Relocations/aarch64/: test_basic_functionality.yml
Sources/HarmoniqSyncCore/test_comprehensive_asan.dSYM/Contents/: Info.plist
Sources/HarmoniqSyncCore/test_comprehensive_asan.dSYM/Contents/Resources/DWARF/: test_comprehensive_asan
Sources/HarmoniqSyncCore/test_comprehensive_asan.dSYM/Contents/Resources/Relocations/aarch64/: test_comprehensive_asan.yml
Sources/HarmoniqSyncKit/: AudioDecoder.swift  Package.swift  SyncEngine.swift
Sources/HarmoniqSyncKit/.build/: build.db  plugin-tools.yaml
Sources/HarmoniqSyncKit/.build/arm64-apple-macosx/debug/: plugin-tools-description.json
Sources/HarmoniqSyncKit/.build/arm64-apple-macosx/debug/HarmoniqSyncKit.build/: ErrorTypes.dia  HarmoniqSyncKit.d  HarmoniqSyncKit.emit-module.d  HarmoniqSyncKit.swiftdeps  master.priors  output-file-map.json  sources
Sources/HarmoniqSyncKit/.build/arm64-apple-macosx/debug/HarmoniqSyncKitPackageTests.build/: output-file-map.json
Sources/HarmoniqSyncKit/.build/arm64-apple-macosx/debug/HarmoniqSyncKitTests.build/: output-file-map.json
Sources/HarmoniqSyncKit/.build/arm64-apple-macosx/debug/ModuleCache/: Accelerate-IS2EQP78RH4L.swiftmodule
Sources/HarmoniqSyncKit/Sources/HarmoniqSyncKit/: AudioDecoder.swift  SyncEngine.swift
Sources/HarmoniqSyncKit/Sources/HarmoniqSyncKit/Internal/: CInterop.swift
Sources/HarmoniqSyncKit/Sources/HarmoniqSyncKit/Types/: ConfigurationTypes.swift  ErrorTypes.swift  SyncTypes.swift
Sources/HarmoniqSyncKit/Sources/HarmoniqSyncKit/include/: harmoniq_sync.h
Sources/HarmoniqSyncKit/Tests/: HarmoniqSyncKitTests.swift
(+162 files in other folders)
